Fix gap in modal background in fill screen mode

--- a/src/assets/css/modals.css
+++ b/src/assets/css/modals.css
@@ -4,7 +4,7 @@
 }
 .modal {
   position: absolute;
-  top: 30px;
+  top: calc(var(--menubar-height));
   bottom: 0;
   left: 0;
   width: 100%;
